--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": "^8.0.2",
         "diglactic/laravel-breadcrumbs": "^9.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "symfony/dom-crawler": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
